fixed text overflow ellipsis
copy ellipsis.xml to /conkeror/install/dir/skin/default/

--- a/ibuffer.css
+++ b/ibuffer.css
@@ -17,31 +17,28 @@
   text-decoration: none;                
 }                
 
+.ibuffer-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  -moz-binding: url("chrome://conkeror-gui/skin/default/ellipsis.xml#ellipsis");
+}
+
 .ibuffer-buffer-title {
   display: inline-block;
   /* border: 1px solid red; */
   width: 30%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .ibuffer-buffer-size {
   display: inline-block;
   /* border: 1px solid yellow; */
   width: 5%;
-  text-align: right;                       
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  text-align: right;
 }
 
 .ibuffer-buffer-desc {
   display: inline-block;
   /* border: 1px solid yellow; */
   width: 40%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   padding-left: 10px;
 }
